Bug 90820 - crash when deleting as-character fly inside fly with a11y enabled
Summary: crash when deleting as-character fly inside fly with a11y enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.0.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2015-04-23 19:31 UTC by Michael Stahl
Modified: 2015-04-24 10:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Stahl 2015-04-23 19:31:45 UTC
master-only crash, need to have accessibility enabled:

1. new writer document
2. Insert->Frame, ok
3. put cursor inside frame
4. Insert->Image, ok
5. change anchor of image to "As character"
6. select outer fram
7. delete
Comment 1 Michael Stahl 2015-04-23 19:32:07 UTC
regression from:

commit e49ca69747e9e905dbb00bbd5a7ea85331607a04
Author:     Stephan Bergmann <sbergman@redhat.com>
AuthorDate: Wed Mar 4 13:30:09 2015 +0100

    Hack to make an in-destruction SwFlyInCntFrm no longer claim to be one
Comment 2 Michael Stahl 2015-04-24 10:33:03 UTC
problem is that a superclass dtor does not dispose the accessible object for the SwFlyInCntFrm because in ~SwFlyFrm the IsAccessibleFrm() and IsFlyInCntFrm() return false.

reverted that commit and did a different fix to move all the logic out of destructors.
Comment 3 Commit Notification 2015-04-24 10:33:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e353190b68f3a89c43b3861444dd2dd6b02a6e0

tdf#90820: Revert "Hack to make an in-destruction SwFlyInCntFrm ...

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2015-04-24 10:33:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=135e4d5c730b8b252eab3e375580a3a73d8204e6

related: tdf#90820 refactor SwFrm destruction

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.