tdf#90820: Revert "Hack to make an in-destruction SwFlyInCntFrm ...

... no longer claim to be one"

This reverts commit e49ca69747e9e905dbb00bbd5a7ea85331607a04.

The problem is that superclass dtor does not dispose the accessible object
for the SwFlyInCntFrm because in ~SwFlyFrm the IsAccessibleFrm() and
IsFlyInCntFrm() return false.

Change-Id: Id7018d50f30da5f8e2f0df307453a55a5f2cff69